# augmentation_backend

./: .gitignore  BUILD.bazel  WORKSPACE  pom.xml  run_javatest.sh
bazel_scripts/: augmentation_backend_java_deps.bzl  augmentation_backend_rules.bzl
src/main/java/com/nexr/de/grnd/: GovernmentRnDDemoApplication.java
src/main/java/com/nexr/de/grnd/constants/: CodeConstants.java
src/main/java/com/nexr/de/grnd/controller/: DemoController.java  KubeAPIController.java  ValidationController.java
src/main/java/com/nexr/de/grnd/entity/: HttpRequestEntity.java  HttpResponseEntity.java  KubernetesAPIEntity.java
src/main/java/com/nexr/de/grnd/entity/engine/: CameraEntity.java  EngineEntity.java  FormatEntity.java  LidarEntity.java  RadarEntity.java
src/main/java/com/nexr/de/grnd/exception/: EngineException.java
src/main/java/com/nexr/de/grnd/service/: DeploymentService.java  GreeterServiceImpl.java  KetiService.java  KubernetesAPIService.java
src/main/java/com/nexr/de/grnd/util/: FileUtil.java  HttpConnectionPool.java  HttpUtil.java  PropertiesUtil.java
src/main/proto/: addressbook.proto  greeter.proto
src/main/resources/: .gitignore  application-prod.properties  application.properties  banner.txt  logback-spring.xml
src/main/resources/kube/: config
src/main/resources/static/: index.html
src/main/resources/static/html/: delayCheck.html  demo.html  demo2023.html
src/main/resources/static/js/: common.js
src/test/java/com/nexr/de/grnd/: Deploy.java  DeployDelete.java  DeployRolloutRestartExample.java  DeployStatus.java  GovernmentRnDDemoApplicationTests.java  KubeConfigFileClientExample.java  YamlExample.java
